# voicerec

./: .gitignore  README.md  WHISPER_INTEGRATION.md  WHISPER_INTEGRATION_GUIDE.md  settings.gradle.kts
.claude/: settings.local.json
app/: build.gradle.kts
app/libs/: README.md
app/src/androidTest/java/com/example/voicerec/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  audio_utils.cpp  audio_utils.h  llama_jni.cpp  native-lib.cpp  whisper_jni.cpp
app/src/main/java/com/example/voicerec/: MainActivity.kt
app/src/main/java/com/example/voicerec/data/: AppDatabase.kt  Recording.kt  RecordingDao.kt  RecordingRepository.kt
app/src/main/java/com/example/voicerec/service/: LlamaModelManager.kt  LlamaService.kt  RecordingService.kt  WhisperModel.kt  WhisperModelManager.kt  WhisperService.kt
app/src/main/java/com/example/voicerec/ui/player/: PlayerFragment.kt  PlayerViewModel.kt
app/src/main/java/com/example/voicerec/ui/recordings/: RecordingsAdapter.kt  RecordingsFragment.kt  RecordingsViewModel.kt
app/src/main/java/com/example/voicerec/ui/reflow/: ReflowFragment.kt  ReflowViewModel.kt
app/src/main/java/com/example/voicerec/ui/settings/: SettingsDataStore.kt  SettingsFragment.kt  SettingsViewModel.kt
app/src/main/java/com/example/voicerec/ui/slideshow/: SlideshowFragment.kt  SlideshowViewModel.kt
app/src/main/java/com/example/voicerec/ui/transform/: TransformFragment.kt  TransformViewModel.kt
app/src/main/java/com/whispercpp/demo/: WhisperContext.kt
app/src/main/res/drawable/: ic_audio.xml  ic_expand.xml  ic_forward.xml  ic_mic.xml  ic_more_vert.xml  ic_rewind.xml
app/src/main/res/layout/: activity_main.xml  fragment_player.xml  fragment_recordings.xml  fragment_settings.xml  item_day.xml  item_hour.xml  item_recording.xml
app/src/main/res/navigation/: mobile_navigation.xml  nav_graph.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/voicerec/: ExampleUnitTest.kt
docs/plans/: 2025-02-19-voice-recorder-design.md  2025-02-19-whisper-integration-design.md  2025-02-19-whisper-integration.md  2025-02-19-whisper-offline-transcription-design.md  2025-02-19-whisper-offline-transcription.md  2025-02-20-llm-title-generation-design.md  2025-02-20-llm-title-generation.md
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
